<resources>
    <string name="app_name">ShoesDicodingSubmission</string>
    <string name="shoes_name">Shoes Name</string>
    <string name="shoes_detail">Shoes Detail</string>
    <string name="profile">Profile</string>
    <string name="name">Christina Yuanita</string>
    <string name="email">Email</string>
    <string name="my_email">christinayuanita380@gmail.com</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
</resources>