<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <RelativeLayout
        android:id="@+id/topProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/display_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/display_picture"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_picture"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/name"
            android:fontFamily="@font/antic"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topProfile"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_email"
                android:textSize="20sp"/>

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>